#11 code cleanUp